style.css
/* Global Configurations */
:root {
    --main-grid-template: 1fr 4fr / 1fr 4fr;
    --main-padding: 10%;
    --main-bg-color: #e9eaeb;
    --default-font-size: 22px;
}

/* Global Resets */
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* Body and Typography */
body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

@font-face {
    font-family: mainFont;
    src: url(./assets/fonts/Roboto/Roboto-Regular.ttf);
}

@font-face {
    font-family: secondaryFont;
    src: url(./assets/fonts/OpenSans-Regular.ttf);
}

input,
button,
textarea,
select {
    font: inherit;
}

button {
    all: unset;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
    font-family: mainFont;
}

ol,
ul {
    list-style: none;
}

/* Images and Media */
img {
    display: block;
    max-width: 100%;
    width: 20px;
}

body {
    display: grid;
    grid-template: var(--main-grid-template);
    height: 100vh;
    font-family: mainFont;
}

.clickable:hover {
    cursor: pointer;
    -webkit-transform: scale(1.05);
    transform: scale(1.05);
}

.clickable-card:hover {
    cursor: pointer;
    -webkit-transform: scale(1.01);
    transform: scale(1.01);
}

ul>li:hover {
    cursor: pointer;
    -webkit-transform: scale(1.01);
    transform: scale(1.01);
    text-decoration: underline;
}

/* Sidebar container */
.sidebar-container {
    grid-row: 1 / 3;
    grid-column: 1 / 2;
    padding: var(--main-padding);
    color: #e2e7f1;
    background-color: #1d93f8;

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto 1fr;
    grid-gap: 35px;
}

.sidebar-header {
    display: flex;
    gap: 10px;
}

#sidebar-header-img {
    width: 40px;
}

.sidebar-header h1 {
    font-size: 26px;
    font-family: secondaryFont;
    font-weight: 600;
}

.sidebar-container img {
    width: 24px;
}

ul li {
    display: flex;
    gap: 10px;
    padding: 4px;
}

.main-nav-container,
.settings-container {
    font-size: var(--default-font-size);
    font-weight: bold;
}

/* Header */
.header {
    grid-column: 2 / 3;

    display: grid;
    row-gap: 15px;
    grid-template-rows: repeat(2, 3fr);
    grid-template-columns: 6fr 1fr 1fr 1fr;
    padding-inline: 20px;
    box-shadow: 1px 5px 5px 1px rgba(0, 0, 0, 0.1);
    z-index: 1;
}

.search-container {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 15px;
}

.search-button img {
    width: 30px;
    margin: 4px;
}

.search {
    background: #e2e7f1;
    border-radius: 15px;
    padding: 10px;
    font-size: 20px;
    height: 30px;
    flex-grow: 1;
    /* justify-self: start; */
    align-self: center;
}

.user-container {
    grid-column: 2 / 5;

    /* border: 1px solid red;    */
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 10px;
}

.bell img,
.user-icon img {
    width: 35px;
    margin-inline: 10px;
}

.user-name {
    display: flex;

    font-size: 30px;
    font-weight: bold;
}

.greeting-container {
    grid-column: 1 / 2;
    grid-row: 2 / 3;

    display: flex;
    align-items: center;
}

.greeting-avatar img {
    width: 80px;
    margin: 10px;
}

.greeting p {
    font-weight: 900;
}

.greeting h1 {
    font-size: 30px;
    font-weight: 900;

}

.button-container {
    grid-column: 2 / 5;
    grid-row: 2 / 3;

    display: flex;
    justify-content: space-around;
    align-items: center;
}

.button-container button {
    text-align: center;
    color: #f9fafb;
    height: 50px;
    width: 100px;
    border-radius: 50px;
    background-color: #3c3cfc;
}

/* Main Container */
.main-container {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    position: relative;
    background-color: var(--main-bg-color);

    display: grid;
    grid-template-columns: 3fr 1fr;
}

.projects-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 3fr 3fr;
}

.projects-container h1 {
    grid-column: 1 / 3;
    font-size: var(--default-font-size);
    font-weight: 900;
    margin-left: 8px;
    padding-top: 20px;

    
    /* align-self: flex-end; */
}

.card {
    width: 420px;
    height: 220px;
    margin: 8px;
    padding: 20px;
    border-left: 10px solid #ffd035;
    box-shadow: 3px 5px 5px 3px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    background-color: #ffffff;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.card h2 {
    font-size: 20px;
    font-weight: 900;
}

.card-icons {
    display: flex;
    justify-content: flex-end;
    gap: 12px;
}

.card-icons img {
    width: 24px;
}

